k8s/k8s-service/assets/nginx-np.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-np
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-np
  template:
    metadata:
      labels:
        app: nginx-np
    spec:
      containers:
      - name: name
        image: nginx
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-np
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx-np
  type: LoadBalancer
