k8s/k8s-service/assets/nginx-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app-ingress
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-app-ingress
  template:
    metadata:
      labels:
        app: nginx-app-ingress
    spec:
      containers:
      - name: name
        image: nginx
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-app-ingress
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx-app-ingress
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-app-ingress
  namespace: default
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-app-ingress
          servicePort: 80
